# DocIntel

./: .gitignore  Iniciar_DocIntel_GUI.bat  README.md  audit_c_drive.py  continuity_supervisor.py  db_stats.py  fast_sampling.py  launch_docintel_gui.py  main.py  monitor_extraction.py  organization_planner.py  post_extraction_gate.py  pyproject.toml  reclassify.py  reclassify_steam.py  run_extraction.py  storage_audit.py  supervise_post_extraction.py
.github/workflows/: ci.yml
config/: organization_policy.py  settings.py  taxonomy.py
db/: connection.py  operations.py
docintel/: __init__.py  filesystem.py  guardrails.py  observability.py
docintel/core/: __init__.py  enums.py  models.py
docintel/db/: __init__.py  connection.py  migrations.py
docintel/gui/: __init__.py  app.py  runtime.py
docintel/validator/: __init__.py  service.py
docs/: architecture.md  data-model.md  security-policy.md
extractors/: hasher.py  orchestrator.py  text_extractor.py
logs/: observability.py
scanner/: discovery.py  environment.py
tests/: test_audit_log.py  test_continuity_supervisor.py  test_db_migrations.py  test_execution_plan_materialization.py  test_guardrails.py  test_gui_runtime.py  test_organization_planner.py  test_supervise_post_extraction.py
